--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
         # запуск проверки проекта по flake8
         python -m flake8
+        pytest.exe
         # перейти в папку, содержащую manage.py — 
         cd api_yamdb/
         # запустить написанные разработчиком тесты
