--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Test with flake8 and django tests
       run: |
         python -m flake8
-        pytest.exe
+        yamdb_final/pytest.exe
         cd api_yamdb/
         python manage.py test
 
