--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -24,7 +24,7 @@ jobs:
         python -m flake8
         python -m pytest
         cd api_yamdb/
-        python manage.py -m test
+        python manage.py test
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
